<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/c172r_checklist_enginestart"
            android:id="@+id/c172r_checklist_enginestart"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/c172r_checklist_enginestart_cold"
            android:id="@+id/c172r_checklist_enginestart_cold"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/c172r_engstart_cold"
            android:id="@+id/c172r_engstart_cold"
            android:layout_below="@+id/c172r_checklist_enginestart_cold"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:lineSpacingExtra="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/c172r_engstart_cold_checked"
            android:id="@+id/c172r_engstart_cold_checked"
            android:layout_alignTop="@+id/c172r_engstart_cold"
            android:layout_toRightOf="@+id/c172r_engstart_cold"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:layout_marginRight="15dp"
            android:lineSpacingExtra="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/c172r_checklist_enginestart_hot"
            android:id="@+id/c172r_checklist_enginestart_hot"
            android:layout_below="@+id/c172r_engstart_cold"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/c172r_engstart_hot"
            android:id="@+id/c172r_engstart_hot"
            android:layout_below="@+id/c172r_checklist_enginestart_hot"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:lineSpacingExtra="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/c172r_engstart_hot_checked"
            android:id="@+id/c172r_engstart_hot_checked"
            android:layout_alignTop="@+id/c172r_engstart_hot"
            android:layout_toRightOf="@+id/c172r_engstart_cold"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:layout_marginRight="15dp"
            android:lineSpacingExtra="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/c172r_checklist_enginestart_flooded"
            android:id="@+id/c172r_checklist_enginestart_flooded"
            android:layout_below="@+id/c172r_engstart_hot"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/c172r_engstart_flooded"
            android:id="@+id/c172r_engstart_flooded"
            android:layout_below="@+id/c172r_checklist_enginestart_flooded"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:lineSpacingExtra="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/c172r_engstart_flooded_checked"
            android:id="@+id/c172r_engstart_flooded_checked"
            android:layout_alignTop="@+id/c172r_engstart_flooded"
            android:layout_toRightOf="@+id/c172r_engstart_flooded"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:layout_marginRight="15dp"
            android:lineSpacingExtra="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/c172r_checklist_enginestart_running"
            android:id="@+id/c172r_checklist_enginestart_running"
            android:layout_below="@+id/c172r_engstart_flooded"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/c172r_engstart_running"
            android:id="@+id/c172r_engstart_running"
            android:layout_below="@+id/c172r_checklist_enginestart_running"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:lineSpacingExtra="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/c172r_engstart_running_checked"
            android:id="@+id/c172r_engstart_running_checked"
            android:layout_alignTop="@+id/c172r_engstart_running"
            android:layout_toRightOf="@+id/c172r_engstart_running"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:layout_marginRight="15dp"
            android:lineSpacingExtra="15dp" />

    </RelativeLayout>
</ScrollView>