<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
        android:background="@drawable/bg">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/c172r_checklist_preflight"
    android:id="@+id/title_c172r_preflight"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/c172r_preflight_details"
        android:id="@+id/textView"
        android:layout_below="@+id/title_c172r_preflight"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:lineSpacingExtra="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/c172r_preflight_details_checked"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:layout_marginRight="15dp"
        android:lineSpacingExtra="15dp" />

</RelativeLayout>
</ScrollView>